--- a/arte.css
+++ b/arte.css
@@ -154,3 +154,358 @@ h1 {
 .noticia-tecnologia h4 span {
   font-weight: 400;
 }
+
+/* ------------Temas Relacionados------------ */
+
+.temas-relacionados {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 70px;
+}
+.titulo-temas {
+  text-align: center;
+  font-size: 25px;
+  margin-top: 70px;
+  margin-bottom: 60px;
+  border-bottom: 2px solid #239cb8;
+}
+.temas-relacionados h5 {
+  text-align: center;
+}
+.tema1 a {
+  text-decoration: none;
+  font-size: 12px;
+  text-align: center;
+  font-weight: 400;
+  color: black;
+  padding: 20px;
+}
+.tema1 a:hover {
+  text-decoration: underline;
+}
+.tema2 a {
+  text-decoration: none;
+  font-size: 12px;
+  text-align: center;
+  font-weight: 400;
+  color: black;
+  border-left: 2px solid black;
+  padding: 20px;
+}
+.tema2 a:hover {
+  text-decoration: underline;
+}
+.tema3 a {
+  text-decoration: none;
+  font-size: 12px;
+  text-align: center;
+  font-weight: 400;
+  color: black;
+  border-left: 2px solid black;
+  padding: 20px;
+}
+.tema3 a:hover {
+  text-decoration: underline;
+}
+.temas-relacionados span {
+  font-weight: 500;
+  color: #d74e09;
+  margin-left: 5px;
+}
+.temas-relacionados span::after {
+  content: "|";
+}
+.segunda {
+  float: right;
+}
+.img {
+  display: inline-block;
+}
+.pie-de-foto1 {
+  position: absolute;
+  margin-left: 150px;
+  margin-top: 15px;
+  font-style: italic;
+  font-weight: 400;
+}
+.pie-de-foto2 {
+  margin-left: 150px;
+  margin-bottom: 45px;
+}
+
+/*---------Más Noticias--------- */
+.contenedor-mas-noticias h3 {
+  text-align: center;
+  border-bottom: 2px solid #239cb8;
+}
+.noticias h2 {
+  text-align: center;
+  margin-bottom: 70px;
+}
+.mas-noticias {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%x;
+}
+.mas-noticias img {
+  width: 300px;
+  height: 180px;
+}
+.noticia a {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  text-decoration: none;
+  color: black;
+  font-weight: 600;
+  font-size: 13px;
+  margin-bottom: 50px;
+}
+h3 {
+  border-bottom: 2px solid #239cb8;
+  margin-bottom: 20px;
+  font-size: 25px;
+  text-align: center;
+}
+.noticia1 img {
+  margin-left: -10px;
+}
+.noticia2 img {
+  margin-left: 20px;
+}
+.noticia1 {
+  padding: 10px;
+}
+.noticia2 {
+  padding: 10px;
+}
+.noticia3 {
+  padding: 10px;
+}
+.noticia3 img {
+  margin-left: 50px;
+}
+
+.noticia1 a:hover {
+  text-decoration: underline;
+}
+.noticia2 a:hover {
+  text-decoration: underline;
+}
+.noticia3 a:hover {
+  text-decoration: underline;
+}
+.video-aside {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+/*-------------------- Formulario---------------- */
+.contenedor-formulario {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.contenedor-formulario img {
+  width: 400px;
+  height: 200px;
+}
+.opinion {
+  font-size: 14px;
+  background: #032a35;
+  border-radius: 10px;
+  color: white;
+  padding: 10px;
+  margin-top: 80px;
+  text-align: center;
+  width: 18%;
+  margin-left: 48px;
+}
+.formulario {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: flex-start;
+  background: #c5c3c6;
+  margin-top: 25px;
+  border-radius: 10px;
+  padding: 30px;
+}
+.formulario input {
+  margin: 10px;
+  padding: 5px;
+  border: 0px;
+  border-radius: 5px;
+  width: 90%;
+}
+.formulario .mensaje {
+  border-radius: 5px;
+  border: 0px;
+  font-family: "Roboto";
+  padding: 10px;
+  margin-left: 10px;
+}
+.boton-enviar {
+  background: #424c55;
+  color: white;
+  padding: 25px 40px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 0px;
+}
+.boton-enviar:hover {
+  background: #71818f;
+  color: white;
+}
+/* <!------------ redes flotantes ---------------> */
+.sticky-container {
+  padding: 0px;
+  margin: 0px;
+  position: fixed;
+  right: -130px;
+  top: 230px;
+  width: 180px;
+  z-index: 1100;
+}
+.sticky li {
+  list-style-type: none;
+  background-color: white;
+  color: #efefef;
+  height: 40px;
+  padding: 0px;
+  margin: 0px 0px 1px 0px;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  cursor: pointer;
+}
+.sticky li:hover {
+  margin-left: -20px;
+}
+
+.sticky li {
+  padding-top: 5px;
+  margin: 0px;
+  line-height: 16px;
+  font-size: 11px;
+}
+.sticky li a {
+  text-decoration: none;
+}
+
+.fa-facebook {
+  font-size: 40px;
+  color: #3b5998;
+}
+
+.fa-twitter-square {
+  font-size: 40px;
+  color: #1da1f2;
+}
+
+.fa-google {
+  font-size: 40px;
+  color: #ea4335;
+}
+
+.fa-youtube-square {
+  font-size: 40px;
+  color: #ff0000;
+}
+
+/* -----------publicidad-------------- */
+
+.publicidad {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: flex-end;
+  margin: 20px auto;
+  margin-right: 36px;
+  margin-left: 37px;
+}
+
+.publicidad img {
+  width: 220px;
+  height: 130px;
+  margin: 20px auto;
+}
+
+/* -------------------Footer--------------- */
+.contenedor-footer {
+  background: #c5c3c6;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.logo img {
+  width: 300px;
+  margin-top: 20px;
+}
+.contactos {
+  margin-left: -80px;
+}
+
+h3 {
+  margin-top: 30px;
+}
+
+.contactos h3 {
+  text-align: center;
+  color: #032a35;
+  border-bottom: 2px solid #239cb8;
+}
+
+.redes {
+  margin-right: 100px;
+}
+
+.redes h3 {
+  color: #032a35;
+  border-bottom: 2px solid #239cb8;
+}
+
+.redes i {
+  font-size: 40px;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.redes .fab.fa-facebook-f {
+  color: #3b5998;
+}
+.redes .fab.fa-youtube {
+  color: #ff0000;
+}
+.redes .fab.fa-twitter {
+  color: #1da1f2;
+}
+.btn-inicio {
+  padding: 0px;
+  right: -75px;
+  /* left: -40px; */
+  position: fixed;
+  top: 410px;
+  width: 180px;
+  z-index: 1100;
+}
+.btn-inicio a img {
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px 0px 1px 0px;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  -o-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+  cursor: pointer;
+}
